MOSIP-32403 Move develop code to release 121x (#1236)
* MOSIP-32403 Move develop code to release 121x

Signed-off-by: kameshsr <kameshsr1338@gmail.com>

* MOSIP-32403 Corrected version

Signed-off-by: kameshsr <kameshsr1338@gmail.com>

* MOSIP-32403 Corrected version

Signed-off-by: kameshsr <kameshsr1338@gmail.com>

---------

Signed-off-by: kameshsr <kameshsr1338@gmail.com>